Implement DTMF [[ToneBuffer]] in the blink layer

This CL makes the Blink layer keep a copy of the tone buffer
and update it on insertDTMF and ontonechange events only; this
makes it possible to expose the state of the tone buffer at the
time the event is fired to the Javascript callback.

It removes a queueing step inside the DTMF sender, because
that queueing step destroyed the consistency.

Bug: chromium:816475
Change-Id: I5aa68396299a67d6cea1e8a17d364f553514c291
Reviewed-on: https://chromium-review.googlesource.com/1213084
Reviewed-by: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Harald Alvestrand <hta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589910}
Former-commit-id: 3f90035e2fac160d23309a96ef2cf465b29cebe4