content/renderer/media/webrtc/rtc_dtmf_sender_handler.h
@@ -38,7 +38,7 @@ class CONTENT_EXPORT RtcDtmfSenderHandler
                   long duration,
                   long interToneGap) override;
 
-  void OnToneChange(const std::string& tone);
+  void OnToneChange(const std::string& tone, const std::string& tone_buffer);
 
  private:
   scoped_refptr<webrtc::DtmfSenderInterface> dtmf_sender_;
