third_party/blink/public/platform/web_rtc_dtmf_sender_handler_client.h
@@ -36,7 +36,8 @@ class WebRTCDTMFSenderHandlerClient {
  public:
   virtual ~WebRTCDTMFSenderHandlerClient() = default;
 
-  virtual void DidPlayTone(const WebString& tone) = 0;
+  virtual void DidPlayTone(const WebString& tone,
+                           const WebString& tone_buffer) = 0;
 };
 
 }  // namespace blink
